Edit index tobacco sales page

--- a/app/views/tobacco_sales/index.html.erb
+++ b/app/views/tobacco_sales/index.html.erb
@@ -4,6 +4,10 @@
 
 <% @tobacco_sales.each do |tobacco_sale| %>
 <div class="box">
+  <div class="columns mb-2 has-background-black">
+  <div class="column is-10"><h5 class="has-text-white">Tobacco Sales Sheet</h5></div>
+  <div class="column is-2">Actions</div>
+</div>
   <div class="columns is-centered">
     <div class="column is-3">
       <div class="card">
