--- a/app/views/barn_and_slate_records/index.html.erb
+++ b/app/views/barn_and_slate_records/index.html.erb
@@ -1,48 +1,47 @@
 <p id="notice"><%= notice %></p>
 
 <%= link_to 'New Barn And Slate Record', new_barn_and_slate_record_path, class:"button is-success my-3" %>
-<h1 class="has-background-white">Barn And Slate Records</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Date</th>
-      <th>Season</th>
-      <th>Farm name</th>
-      <th>P barn number</th>
-      <th>Reap</th>
-      <th>P slate numberslate weight</th>
-      <th>Barn weight</th>
-      <th>Cumulative barn weight</th>
-      <th>Pro number</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="box">
+  <h1 class="has-background-white">Barn And Slate Records</h1>
 
-  <tbody>
-    <% @barn_and_slate_records.each do |barn_and_slate_record| %>
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= barn_and_slate_record.Company_Name %></td>
-        <td><%= barn_and_slate_record.Date %></td>
-        <td><%= barn_and_slate_record.Season %></td>
-        <td><%= barn_and_slate_record.Farm_Name %></td>
-        <td><%= barn_and_slate_record.P_Barn_Number %></td>
-        <td><%= barn_and_slate_record.Reap %></td>
-        <td><%= barn_and_slate_record.P_Slate_NumberSlate_Weight %></td>
-        <td><%= barn_and_slate_record.Barn_Weight %></td>
-        <td><%= barn_and_slate_record.Cumulative_Barn_Weight %></td>
-        <td><%= barn_and_slate_record.Pro_Number %></td>
-        <td><%= barn_and_slate_record.user_id %></td>
-        <td><%= link_to 'Show', barn_and_slate_record %></td>
-        <td><%= link_to 'Edit', edit_barn_and_slate_record_path(barn_and_slate_record) %></td>
-        <td><%= link_to 'Destroy', barn_and_slate_record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Company name</th>
+        <th>Date</th>
+        <th>Season</th>
+        <th>Farm name</th>
+        <th>P barn number</th>
+        <th>Reap</th>
+        <th>P slate numberslate weight</th>
+        <th>Barn weight</th>
+        <th>Cumulative barn weight</th>
+        <th>Pro number</th>
+        <th>User</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-
+    <tbody>
+      <% @barn_and_slate_records.each do |barn_and_slate_record| %>
+        <tr>
+          <td><%= barn_and_slate_record.Company_Name %></td>
+          <td><%= barn_and_slate_record.Date %></td>
+          <td><%= barn_and_slate_record.Season %></td>
+          <td><%= barn_and_slate_record.Farm_Name %></td>
+          <td><%= barn_and_slate_record.P_Barn_Number %></td>
+          <td><%= barn_and_slate_record.Reap %></td>
+          <td><%= barn_and_slate_record.P_Slate_NumberSlate_Weight %></td>
+          <td><%= barn_and_slate_record.Barn_Weight %></td>
+          <td><%= barn_and_slate_record.Cumulative_Barn_Weight %></td>
+          <td><%= barn_and_slate_record.Pro_Number %></td>
+          <td><%= barn_and_slate_record.user_id %></td>
+          <td><%= link_to 'Show', barn_and_slate_record %></td>
+          <td><%= link_to 'Edit', edit_barn_and_slate_record_path(barn_and_slate_record) %></td>
+          <td><%= link_to 'Destroy', barn_and_slate_record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
