--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -159,6 +159,12 @@
 
     <div class="columns is-centered">
       <div class="column is-11 my-2 py-1 side-bar">
+        <%= link_to 'TimeBook', timebooks_path, class:"has-text-white" %>
+      </div>
+    </div>
+
+    <div class="columns is-centered">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Tobacco Sales', tobacco_sales_path, class:"has-text-white" %>
       </div>
     </div>
