--- a/app/views/timebooks/_form.html.erb
+++ b/app/views/timebooks/_form.html.erb
@@ -17,36 +17,36 @@
   </div>
 
   <div class="field">
-    <%= form.label :employee_name %>
-    <%= form.text_field :employee_name %>
+    <%= form.label :employee_name, class:'label' %>
+    <%= form.text_field :employee_name, class:'input' %>
   </div>
 
   <div class="field">
-    <%= form.label :employee_number %>
-    <%= form.text_field :employee_number %>
+    <%= form.label :employee_number, class:'label' %>
+    <%= form.text_field :employee_number, class:'input' %>
   </div>
 
   <div class="field">
-    <%= form.label :rate %>
-    <%= form.text_field :rate %>
+    <%= form.label :rate, class:'label' %>
+    <%= form.text_field :rate, class:'input' %>
   </div>
 
   <div class="field">
-    <%= form.label :day %>
-    <%= form.text_field :day %>
+    <%= form.label :day, class:'label' %>
+    <%= form.text_field :day, class:'input' %>
   </div>
 
   <div class="field">
-    <%= form.label :gross %>
-    <%= form.text_field :gross %>
+    <%= form.label :gross, class:'label' %>
+    <%= form.text_field :gross, class:'input' %>
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <%= form.label :user_id, class:'label' %>
+    <%= form.text_field :user_id, class:'input' %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"button is-success" %>
   </div>
 <% end %>
