--- a/app/views/cashflows/index.html.erb
+++ b/app/views/cashflows/index.html.erb
@@ -18,6 +18,8 @@
       <th>Input name</th>
       <th>Total amount</th>
       <th>Pro number</th>
+      <th>Tian Ze  number</th>
+      <th>Total Quantity</th>
       <th>User</th>
       <th colspan="3"></th>
     </tr>
@@ -39,6 +41,8 @@
         <td><%= cashflow.Input_Name %></td>
         <td><%= cashflow.Total_Amount %></td>
         <td><%= cashflow.Pro_Number %></td>
+        <td><%= cashflow.tian_ze_number %></td>
+        <td><%= cashflow.total_quantity %></td>
         <td><%= cashflow.user_id %></td>
         <td><%= link_to 'Show', cashflow %></td>
         <td><%= link_to 'Edit', edit_cashflow_path(cashflow) %></td>
