--- a/app/views/timebooks/index.html.erb
+++ b/app/views/timebooks/index.html.erb
@@ -1,8 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'New Timebook', new_timebook_path, class:"button is-success my-3" %>
+
 <h1>Timebooks</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Date</th>
@@ -11,7 +13,6 @@
       <th>Rate</th>
       <th>Day</th>
       <th>Gross</th>
-      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,7 +26,6 @@
         <td><%= timebook.rate %></td>
         <td><%= timebook.day %></td>
         <td><%= timebook.gross %></td>
-        <td><%= timebook.user_id %></td>
         <td><%= link_to 'Show', timebook %></td>
         <td><%= link_to 'Edit', edit_timebook_path(timebook) %></td>
         <td><%= link_to 'Destroy', timebook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -33,7 +33,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Timebook', new_timebook_path %>
