Add more columns

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,7 @@
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
-                <%= link_to 'Home', users_path, class:"button is-light" %>
+                <%= link_to 'Users', users_path, class:"button is-light" %>
                 <%= link_to 'Edit Account', edit_user_registration_path, class:"button is-light" %>
                 <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class:"button is-light" %>
               </div>
