--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -49,7 +49,7 @@
 
 
 <% @users.each do |user| %>
-<div class="card my-5">
+<div class="card mb-5">
   <div class="card-header"></div>
   <div class="card-content">
     <div class="content">
