--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -43,6 +43,17 @@
         </div>
       </div>
     </div>
+
+    <div class="column pb-0">
+      <div class="card pb-0">
+        <h1 class="has-text-centered has-background-black"><strong class="has-text-light">Verified Users</strong></h1>
+        <div class="card-content has-background-light">
+          <div class="content has-text-centered">
+            <%= User.all.verified.count %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -85,7 +96,7 @@
           <div class="columns">
             <div class="column is-7">
               <h4>Status</h4>
-              <% if user.Status == true %>
+              <% if user.status == true %>
                 <p>Verified</p>
               <% else %>
                 <p>Not Verified</p>
