--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -66,7 +66,7 @@
         <p>
         Hello 
         <% if user_signed_in? %>
-          <%= current_user.email.capitalize %>
+          <%= current_user.username.upcase %>
         <% else %>
           <span>Guest User</span>
         <% end %>
