--- a/app/views/client_payments/index.html.erb
+++ b/app/views/client_payments/index.html.erb
@@ -34,9 +34,10 @@
           <div class="content">
             <div><strong>Category:</strong> <%= client_payment.Category %></div>
             <div><strong>Receipt_Number:</strong> <%= client_payment.Receipt_Number %></div>
-            <div><strong>Amount_Paid:</strong> <%= client_payment.Amount_Paid %></div>
-            <div><strong>Balance:</strong> <%= client_payment.Balance %></div>
-            <div><strong>Date:</strong> <%= client_payment.Date %></div>
+            <div><strong>Amount_Paid:</strong> <%= client_payment.amount_paid %></div>
+            <div><strong>Balance:</strong> <%= client_payment.balance %></div>
+            <div><strong>Valid From:</strong> <%= client_payment.valid_from %></div>
+            <div><strong>Valid To:</strong> <%= client_payment.valid_to %></div>
             <div><strong>Pro_Number:</strong> <%= client_payment.Pro_Number %></div>
           </div>
         </div>
