--- a/app/views/client_payments/show.html.erb
+++ b/app/views/client_payments/show.html.erb
@@ -17,17 +17,22 @@
 
 <p>
   <strong>Amount-paid:</strong>
-  <%= @client_payment.Amount_Paid %>
+  <%= @client_payment.amount_paid %>
 </p>
 
 <p>
   <strong>Balance:</strong>
-  <%= @client_payment.Balance %>
+  <%= @client_payment.balance %>
 </p>
 
 <p>
-  <strong>Date:</strong>
-  <%= @client_payment.Date %>
+  <strong>Valid From:</strong>
+  <%= @client_payment.valid_from %>
+</p>
+
+<p>
+  <strong>Valid To:</strong>
+  <%= @client_payment.valid_to %>
 </p>
 
 <p>
