Add more changes

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -54,6 +54,18 @@
         </div>
       </div>
     </div>
+
+    <div class="column pb-0">
+      <div class="card pb-0">
+        <h1 class="has-text-centered has-background-black"><strong class="has-text-light">Contractors</strong></h1>
+        <div class="card-content has-background-light">
+          <div class="content has-text-centered">
+            <%= User.all.contractor.count %>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
 
