--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,20 @@
     <div class="columns">
 
       <%if user_signed_in? %>
+        <% if current_user.email == 'tongoonamujera@gmail.com' %>
+          <div class="column is-3 has-background-black">
+            <%= render 'layouts/sidebar'%>
+          </div>
+          <div class="column is-9 has-background-grey-dark">
+            <div class="columns is-centered">
+              <div class="column is-12 overflow-y">
+                <%= yield %>
+              </div>
+            </div>
+          </div>
+        <% else %>
         <% ClientPayment.valid.each do |client_payment|%>
-          <% unless client_payment.Company_Name == current_user.Company_Name #|| current_user.email == 'tongoonamujera@gmail.com'  %>
+          <% unless client_payment.Company_Name == current_user.Company_Name %>
             <%= render 'layouts/verification'%>
           <%else%>
             <div class="column is-3 has-background-black">
@@ -30,7 +42,7 @@
             </div>
           <% end %>
         <%end%>
-
+        <% end %>
       <% else %>
         <div class="container">
           <%= yield %>
