Add more changes to the project

--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to 'New Asset', new_asset_path, class:"button is-success my-3" %>
 <h1>Assets</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Company name</th>
