--- a/app/views/deliveries/_form.html.erb
+++ b/app/views/deliveries/_form.html.erb
@@ -75,16 +75,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :Amount, class:"label" %>
+    <%= form.label :amount, class:"label" %>
     <div class="control">
-      <%= form.text_field :Amount, class:"input" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= form.label :Amount, class:"label" %>
-    <div class="control">
-      <%= form.text_field :Amount, class:"input" %>
+      <%= form.text_field :amount, class:"input" %>
     </div>
   </div>
 
