--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -15,7 +15,6 @@
       <th>Goods</th>
       <th>Quantity</th>
       <th>Amount</th>
-      <th>Amount</th>
       <th>Pro number</th>
       <th>User</th>
       <th colspan="3"></th>
@@ -34,8 +33,7 @@
         <td><%= delivery.Delivered_by %></td>
         <td><%= delivery.Goods %></td>
         <td><%= delivery.Quantity %></td>
-        <td><%= delivery.Amount %></td>
-        <td><%= delivery.Amount %></td>
+        <td><%= delivery.amount %></td>
         <td><%= delivery.Pro_Number %></td>
         <td><%= delivery.user_id %></td>
         <td><%= link_to 'Show', delivery %></td>
