--- a/app/views/deliveries/show.html.erb
+++ b/app/views/deliveries/show.html.erb
@@ -47,12 +47,7 @@
 
 <p>
   <strong>Amount:</strong>
-  <%= @delivery.Amount %>
-</p>
-
-<p>
-  <strong>Amount:</strong>
-  <%= @delivery.Amount %>
+  <%= @delivery.amount %>
 </p>
 
 <p>
