--- a/app/views/deduction_tables/_form.html.erb
+++ b/app/views/deduction_tables/_form.html.erb
@@ -26,16 +26,16 @@
   </div>
 
   <div class="field">
-    <%= form.label :Gross, class:"label" %>
+    <%= form.label :employee_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Gross, class:"input" %>
+      <%= form.text_field :employee_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Net, class:"label" %>
+    <%= form.label :employee_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Net, class:"input" %>
+      <%= form.text_field :employee_number, class:"input" %>
     </div>
   </div>
 
@@ -43,6 +43,41 @@
     <%= form.label :Farm_Name, class:"label" %>
     <div class="control">
       <%= form.text_field :Farm_Name, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :allowance, class:"label" %>
+    <div class="control">
+      <%= form.text_field :allowance, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :payee, class:"label" %>
+    <div class="control">
+      <%= form.text_field :payee, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :nssa, class:"label" %>
+    <div class="control">
+      <%= form.text_field :nssa, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :nec, class:"label" %>
+    <div class="control">
+      <%= form.text_field :nec, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :cash_requests, class:"label" %>
+    <div class="control">
+      <%= form.text_field :cash_requests, class:"input" %>
     </div>
   </div>
 
