--- a/app/views/deduction_tables/index.html.erb
+++ b/app/views/deduction_tables/index.html.erb
@@ -7,9 +7,14 @@
     <tr>
       <th>Season</th>
       <th>Month</th>
-      <th>Gross</th>
-      <th>Net</th>
+      <th>Employee Name</th>
+      <th>Employee Number</th>
       <th>Farm name</th>
+      <th>Allowance</th>
+      <th>Payee</th>
+      <th>NSSA</th>
+      <th>NEC</th>
+      <th>Cash Requests</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,9 +24,14 @@
       <tr>
         <td><%= deduction_table.Season %></td>
         <td><%= deduction_table.Month %></td>
-        <td><%= deduction_table.Gross %></td>
-        <td><%= deduction_table.Net %></td>
+        <td><%= deduction_table.employee_name %></td>
+        <td><%= deduction_table.employee_number %></td>
         <td><%= deduction_table.Farm_Name %></td>
+        <td><%= deduction_table.allowance %></td>
+        <td><%= deduction_table.payee %></td>
+        <td><%= deduction_table.nssa %></td>
+        <td><%= deduction_table.nec %></td>
+        <td><%= deduction_table.cash_requests %></td>
         <td><%= link_to 'Show', deduction_table %></td>
         <td><%= link_to 'Edit', edit_deduction_table_path(deduction_table) %></td>
         <td><%= link_to 'Destroy', deduction_table, method: :delete, data: { confirm: 'Are you sure?' } %></td>
