--- a/app/views/timebooks/_form.html.erb
+++ b/app/views/timebooks/_form.html.erb
@@ -42,6 +42,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :season, class:'label' %>
+    <%= form.text_field :season, class:'input' %>
+  </div>
+
+  <div class="field">
     <%= form.label :user_id, class:'label' %>
     <%= form.text_field :user_id, class:'input' %>
   </div>
