--- a/app/views/timebooks/show.html.erb
+++ b/app/views/timebooks/show.html.erb
@@ -31,6 +31,11 @@
 </p>
 
 <p>
+  <strong>Season:</strong>
+  <%= @timebook.season %>
+</p>
+
+<p>
   <strong>User:</strong>
   <%= @timebook.user_id %>
 </p>
